added another grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,21 @@
 
     <div class="container">
       <table class="grid">
+        <tr class="header-row">
+          <td class="corner"></td>
+          <td>1</td>
+          <td>2</td>
+          <td>3</td>
+          <td>4</td>
+          <td>5</td>
+          <td>6</td>
+          <td>7</td>
+          <td>8</td>
+          <td>9</td>
+          <td>10</td>
+        </tr>
         <tr>
+          <td class="header-col">A</td>
           <td></td>
           <td></td>
           <td></td>
@@ -28,6 +42,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">B</td>
           <td></td>
           <td></td>
           <td></td>
@@ -40,6 +55,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">C</td>
           <td></td>
           <td></td>
           <td></td>
@@ -52,6 +68,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">D</td>
           <td></td>
           <td></td>
           <td></td>
@@ -64,6 +81,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">E</td>
           <td></td>
           <td></td>
           <td></td>
@@ -76,6 +94,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">F</td>
           <td></td>
           <td></td>
           <td></td>
@@ -88,6 +107,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">G</td>
           <td></td>
           <td></td>
           <td></td>
@@ -100,6 +120,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">H</td>
           <td></td>
           <td></td>
           <td></td>
@@ -112,6 +133,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">I</td>
           <td></td>
           <td></td>
           <td></td>
@@ -124,6 +146,7 @@
           <td></td>
         </tr>
         <tr>
+          <td class="header-col">J</td>
           <td></td>
           <td></td>
           <td></td>
@@ -137,5 +160,151 @@
         </tr>
       </table>
     </div>
+
+    <table class="grid">
+      <tr class="header-row">
+        <td class="corner"></td>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+        <td>9</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td class="header-col">A</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">B</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">C</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">D</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">E</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">F</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">G</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">H</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">I</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="header-col">J</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
   </body>
 </html>
