--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,8 @@ body {
 }
 
 .container {
+  display: flex;
+  gap: 40px;
   margin: 20px;
 }
 
@@ -32,4 +34,9 @@ h1 {
   color: #333;
   text-align: center;
   margin: 20px 0;
+}
+
+#target-grid,
+#ocean-grid {
+  flex: 0 0 auto;
 }
