--- a/templates/index.html
+++ b/templates/index.html
@@ -349,5 +349,6 @@
       </div>
     </div>
     <footer><p>Created by Risheet Lenka</p></footer>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   </body>
 </html>
