--- a/templates/index.html
+++ b/templates/index.html
@@ -326,26 +326,38 @@
       </div>
       <div id="ships-container">
         <h2>Ships</h2>
-        <div class="ship carrier" draggable="true" data-ship-length="5">
-          <div class="ship-preview">◼◼◼◼◼</div>
-          <p>Carrier (5)</p>
-        </div>
-        <div class="ship battleship" draggable="true" data-ship-length="4">
-          <div class="ship-preview">◼◼◼◼</div>
-          <p>Battleship (4)</p>
-        </div>
-        <div class="ship cruiser" draggable="true" data-ship-length="3">
-          <div class="ship-preview">◼◼◼</div>
-          <p>Cruiser (3)</p>
-        </div>
-        <div class="ship submarine" draggable="true" data-ship-length="3">
-          <div class="ship-preview">◼◼◼</div>
-          <p>Submarine (3)</p>
-        </div>
-        <div class="ship destroyer" draggable="true" data-ship-length="2">
-          <div class="ship-preview">◼◼</div>
-          <p>Destroyer (2)</p>
-        </div>
+        <ul class="ships-list">
+          <li>
+            <div class="ship carrier" draggable="true" data-ship-length="5">
+              <div class="ship-preview">◼◼◼◼◼</div>
+              <p>Carrier (5)</p>
+            </div>
+          </li>
+          <li>
+            <div class="ship battleship" draggable="true" data-ship-length="4">
+              <div class="ship-preview">◼◼◼◼</div>
+              <p>Battleship (4)</p>
+            </div>
+          </li>
+          <li>
+            <div class="ship cruiser" draggable="true" data-ship-length="3">
+              <div class="ship-preview">◼◼◼</div>
+              <p>Cruiser (3)</p>
+            </div>
+          </li>
+          <li>
+            <div class="ship submarine" draggable="true" data-ship-length="3">
+              <div class="ship-preview">◼◼◼</div>
+              <p>Submarine (3)</p>
+            </div>
+          </li>
+          <li>
+            <div class="ship destroyer" draggable="true" data-ship-length="2">
+              <div class="ship-preview">◼◼</div>
+              <p>Destroyer (2)</p>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
     <footer><p>Created by Risheet Lenka</p></footer>
