made ship orientation toggleable

--- a/templates/index.html
+++ b/templates/index.html
@@ -330,31 +330,46 @@
           <li>
             <div class="ship carrier" draggable="true" data-ship-length="5">
               <div class="ship-preview">◼◼◼◼◼</div>
-              <p>Carrier (5)</p>
+              <p>
+                Carrier (5)
+                <span class="orientation-indicator">↔</span>
+              </p>
             </div>
           </li>
           <li>
             <div class="ship battleship" draggable="true" data-ship-length="4">
               <div class="ship-preview">◼◼◼◼</div>
-              <p>Battleship (4)</p>
+              <p>
+                Battleship (4)
+                <span class="orientation-indicator">↔</span>
+              </p>
             </div>
           </li>
           <li>
             <div class="ship cruiser" draggable="true" data-ship-length="3">
               <div class="ship-preview">◼◼◼</div>
-              <p>Cruiser (3)</p>
+              <p>
+                Cruiser (3)
+                <span class="orientation-indicator">↔</span>
+              </p>
             </div>
           </li>
           <li>
             <div class="ship submarine" draggable="true" data-ship-length="3">
               <div class="ship-preview">◼◼◼</div>
-              <p>Submarine (3)</p>
+              <p>
+                Submarine (3)
+                <span class="orientation-indicator">↔</span>
+              </p>
             </div>
           </li>
           <li>
             <div class="ship destroyer" draggable="true" data-ship-length="2">
               <div class="ship-preview">◼◼</div>
-              <p>Destroyer (2)</p>
+              <p>
+                Destroyer (2)
+                <span class="orientation-indicator">↔</span>
+              </p>
             </div>
           </li>
         </ul>
