created container for play gamestate

--- a/templates/index.html
+++ b/templates/index.html
@@ -374,6 +374,12 @@
           </li>
         </ul>
       </div>
+      <div id="play-container">
+        <p>
+          Turn:
+          <span class="player-turn"></span>
+        </p>
+      </div>
     </div>
     <footer><p>Created by Risheet Lenka</p></footer>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
