updated validation and completed other features

--- a/templates/index.html
+++ b/templates/index.html
@@ -377,8 +377,18 @@
       <div id="play-container">
         <p>
           Turn:
-          <span class="player-turn"></span>
+          <span class="player-turn">Player 1</span>
         </p>
+        <div class="game-status">
+          <p>
+            Game Status:
+            <span id="game-state">Placing Ships</span>
+          </p>
+          <p>
+            Ships Remaining:
+            <span id="ships-remaining">5</span>
+          </p>
+        </div>
       </div>
     </div>
     <footer><p>Created by Risheet Lenka</p></footer>
