finished program and added event listener

--- a/templates/index.html
+++ b/templates/index.html
@@ -390,6 +390,13 @@
           </p>
         </div>
       </div>
+      <div id="play-container">
+        <p>
+          Game Status:
+          <span id="game-state">Waiting for Players</span>
+        </p>
+        <button id="reset-game" class="reset-button">Reset Game</button>
+      </div>
     </div>
     <footer><p>Created by Risheet Lenka</p></footer>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
