--- a/templates/index.html
+++ b/templates/index.html
@@ -376,7 +376,8 @@
       </div>
       <div id="play-container">
         <p>
-          Turn:
+          <!-- 
+           -->
           <span class="player-turn">Player 1</span>
         </p>
         <div class="game-status">
@@ -390,13 +391,13 @@
           </p>
         </div>
       </div>
-      <div id="play-container">
+      <!-- <div id="play-container">
         <p>
           Game Status:
           <span id="game-state">Waiting for Players</span>
         </p>
         <button id="reset-game" class="reset-button">Reset Game</button>
-      </div>
+      </div> -->
     </div>
     <footer><p>Created by Risheet Lenka</p></footer>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
